--- a/style.css
+++ b/style.css
@@ -12,14 +12,25 @@ body{
     height: 100vh;
 }
 
+.game{
+    padding: 10px;
+}
+
+
+.header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
 
 .mainDiv{
     display: flex;
     flex-direction: row;
 }
 img{
-    width: 30px;
-    height: 30px;
+    width: 100%;
+    height: 100%;
 }
 .cell{
     height: 40px;
@@ -29,4 +40,23 @@ img{
     justify-content: center;
     align-items: center;
     font-size: 30px;
+}
+
+.menu{
+    padding: 2px;
+    margin: 2px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+select,button
+{
+    padding: 2px;
+    margin: 2px;
+    width: 100px;
+    height: 30px;
+    opacity: 0.7;
+    color: blue;
+    background-color: greenyellow;
 }
